--- a/bio.html
+++ b/bio.html
@@ -41,6 +41,8 @@
         <section id="bio" class="bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">About Scandal Murty</h2>
             <p class="text-lg leading-relaxed text-gray-700">
+                Scandal. Yeah, that's my real name and here is where it came from: 
+            </p>
                 My mom was a big fan of the TV show Cobra, and yes, it does actually exist. She loved it so much that she named me after the main character, who was also named Scandal. Let's just say she had a unique taste in TV shows. In any case, it's a great story, and it definitely makes for a good laugh. After all, what's life without a little scandal?
 
 Now that we've cleared that up, let's talk about what I do and how I can help you...
