--- a/bio.html
+++ b/bio.html
@@ -41,11 +41,13 @@
         <section id="bio" class="bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">About Scandal Murty</h2>
             <p class="text-lg leading-relaxed text-gray-700">
-                Scandal. Yeah, that's my real name and here is where it came from: 
+                Scandal. Yeah, that's my real name, and here is where it came from: My mom was a big fan of the TV show *Cobra*. She loved it so much that she named me after the main character, who was also named Scandal. Let's just say she had a unique taste in TV shows! In any case, it's a great story, and it definitely makes for a good laugh. After all, what's life without a little scandal?
             </p>
-                My mom was a big fan of the TV show Cobra, and yes, it does actually exist. She loved it so much that she named me after the main character, who was also named Scandal. Let's just say she had a unique taste in TV shows. In any case, it's a great story, and it definitely makes for a good laugh. After all, what's life without a little scandal?
-
-Now that we've cleared that up, let's talk about what I do and how I can help you...
+            <p class="text-lg leading-relaxed text-gray-700 mt-4">
+                Now that we've cleared that up, let's talk about what I do and how I can help you. I'm an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Data Analytics. I am passionate about leveraging data to drive informed decisions and solve complex problems. This portfolio showcases my academic journey, professional aspirations, and personal projects. My goal is to combine my analytical skills with my technical foundation to extract meaningful insights from data, contributing to business growth and efficiency. I am eager to learn and apply new technologies and methodologies in the field of data science.
+            </p>
+            <p class="text-lg leading-relaxed text-gray-700 mt-4">
+                Feel free to explore my resume, projects, and hobbies. I'm excited about the possibilities that data analysis offers and look forward to connecting with professionals in the field!
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4 font-medium">
                 — Scandal Murty
