--- a/bio.html
+++ b/bio.html
@@ -40,6 +40,9 @@
     <main class="flex-grow container mx-auto p-6 md:p-8">
         <section id="bio" class="bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">About Scandal Murty</h2>
+            <div class="flex justify-center mb-6">
+                <img src="cobra poster.jpg" alt="A promotional poster for the 1993 TV show, Cobra." class="rounded-lg shadow-md max-w-sm w-full h-auto">
+            </div>
             <p class="text-lg leading-relaxed text-gray-700">
                 Scandal. Yeah, that's my real name, and here is where it came from: My mom was a big fan of the TV show *Cobra*. She loved it so much that she named me after the main character, who was also named Scandal. Let's just say she had a unique taste in TV shows! In any case, it's a great story, and it definitely makes for a good laugh. After all, what's life without a little scandal?
             </p>
