Fix formatting and punctuation in bio.html

--- a/bio.html
+++ b/bio.html
@@ -47,7 +47,7 @@
                 <div class="lg:w-2/3">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-2">The Story Behind the Name</h3>
                     <p class="text-lg leading-relaxed text-gray-700">
-                        Scandal. Yeah, that's my real name, and here is where it came from: My mom was a big fan of the 1993 TV show *Cobra*. She loved it so much that she named me after the main character, who was also named Scandal. It's a great story, and it definitely makes for a good laugh. After all, what's life without a little bit of a unique start?
+                        Scandal. Yeah, that's my real name, and here is where it came from: My mom was a big fan of the 1993 TV show "Cobra". She loved it so much that she named me after the main character, who was also named Scandal. It's a great story, and it definitely makes for a good laugh. After all, what's life without a little bit of a unique start?
                     </p>
                     <div class="flex justify-center my-6 lg:hidden">
                         <img src="photos/cobra poster.jpg" alt="A promotional poster for the 1993 TV show, Cobra." class="rounded-lg shadow-md max-w-sm w-full h-auto">
@@ -55,7 +55,7 @@
                     
                     <h3 class="text-2xl font-semibold text-gray-800 mt-6 mb-2">My Approach to Data</h3>
                     <p class="text-lg leading-relaxed text-gray-700">
-                        As an aspiring **Data Analyst / Business Analyst**, I've found my passion in translating complex data into **clear, actionable insights**. My motivation stems from the belief that behind every dataset is a story waiting to be told—a story that can drive efficiency and growth. My **Associate's degree in Data Analytics** has equipped me with a strong technical foundation in **SQL, Python, and Tableau**, which I leverage to solve problems both professionally and in my personal projects.
+                        As an aspiring Data Analyst / Business Analyst, I've found my passion in translating complex data into clear, actionable insights. My motivation stems from the belief that behind every dataset is a story waiting to be told—a story that can drive efficiency and growth. My Associate's degree in Data Analytics has equipped me with a strong technical foundation in SQL, Python, and Tableau, which I leverage to solve problems both professionally and in my personal projects.
                     </p>
                     <p class="text-lg leading-relaxed text-gray-700 mt-4">
                         I thrive on connecting the technical details of data science with the strategic needs of a business, making me eager to contribute fresh perspectives and methodologies to a forward-thinking team.
